objects/FSL_Due_Date_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Applicable_Work_Types__c</fullName>
        <description>A comma separated list of worktype external id names to indicate a rule applies to these specific work types only. If left blank, all work types apply.</description>
        <inlineHelpText>A comma separated list of worktype external id names to indicate a rule applies to these specific work types only. If left blank, all work types apply.</inlineHelpText>
        <label>Applicable Work Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Dealer Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Represents the Account&apos;s Dealer Type picklist, a rule listed here would apply to all accounts that have this dealer type</description>
        <inlineHelpText>Represents the Account&apos;s Dealer Type picklist, a rule listed here would apply to all accounts that have this dealer type</inlineHelpText>
        <label>Dealer Type</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Due_Date_Setting__c</fullName>
        <description># of Business Days in which a Due Date should be after the Earliest Start Date</description>
        <inlineHelpText># of Business Days in which a Due Date should be after the Earliest Start Date</inlineHelpText>
        <label>Due Date Setting</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is referencing the SF User Id</description>
        <inlineHelpText>This is referencing the SF User Id</inlineHelpText>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>FSL Due Date Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Dealer_Id__c</columns>
        <columns>Dealer_Type__c</columns>
        <columns>User_Id__c</columns>
        <columns>Due_Date_Setting__c</columns>
        <columns>Applicable_Work_Types__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (Main)</label>
    </listViews>
    <pluralLabel>FSL Due Date Rules</pluralLabel>
</CustomObject>